<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yo Verifico</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="activity_login_screen_name">Inicia sesión o regístrate</string>
    <string name="register_with_email">Regístrate con tu correo</string>
    <string name="sessión_with_email">Inicia sesíon con tu correo</string>
    <string name="tutorial_menu">Cómo funciona</string>
    <string name="tutorial_menu_two">Nos Mueve la Paz</string>
    <string name="map_menu">mapa</string>
    <string name="share_menu">compartir</string>

    <string name="settings_tabs">Configuración</string>
    <string name="mexico">México</string>
    <string name="event_title">Evento</string>
    <string name="evindece_three_instruccions">Anota cualquier observación importante</string>
    <string name="evindece_three_instruccions_a">Agregar comentario</string>
    <string name="evindece_three_instruccions_btn">CONTINUAR</string>
    <string name="evidence_one_fragment">Capturar Fotos </string>
    <string name="evidence_two_fragment">Calificar Evento</string>
    <string name="evidence_three_fragment">Agregar Observaciones</string>
    <string name="evidence_four_fragment">Tu Reporte</string>


    <!-- detail -->
    <string name="recopilate_evidence">Recopilar evidencia</string>
    <string name="data_detail">Fecha</string>
    <string name="time_detail">Hora</string>
    <string name="description_detail">Descripción</string>
    <string name="place_detail">Lugar</string>
    <string name="contact_detail">Contacto</string>
    <string name="data_detail_lorem">22-12-2015</string>
    <string name="time_detail_lorem">12:00 - 24:00</string>
    <string name="description_detail_lorem">Descripción</string>
    <string name="place_detail_lorem">Lugar</string>
    <string name="contact_detail_lorem">opi@mail.com</string>

    <!-- LoginActivity -->
    <string name="user_mail">Correo electrónico</string>
    <string name="user_password">Contraseña</string>
    <string name="button_session">Inicia sesión</string>
    <string name="button_session_login">Iniciar sesión</string>
    <string name="button_register">Regístrate</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="not_internet_conection">En este momento no estas conectado</string>
    <string name="not_session_succes">Se ha producido un error durante el inicio de sesión. Inténtalo de nuevo.</string>
    <string name="not_register_succes">Se ha producido un error durante el registro de usuario. Inténtalo de nuevo.</string>
    <string name="not_update_succes">Se ha producido un error durante la actualización  de localidad. Inténtalo de nuevo.</string>
    <string name="expected_error">Parece que ocurrio un error inesperado. Inténtalo de nuevo mas tarde.</string>
    <string name="expected_error_token">Parece que ocurrio un error con tu conexión. Inténtalo de nuevo.</string>
    <string name="expected_connection">No se pudo obtener Estado y Municipio debido a un problema con tu conexión. Inténtalo de nuevo"</string>
    <string name="location_change">Ahora recibiras las ocurrencias cercanas a esta localidad.</string>
    <string name="description_app">Programa Nacional para la Prevención Social de la Violencia y la Delincuencia ,en donde la participación de los ciudadanos es fundamental para fortalecer nuestras comunidades e instituciones y así crear condiciones favorables para avanzar hacia la paz.</string>

    <!-- SignUp -->
    <string name="sign_up_title">Registrate </string>
    <string name="user_name">Nombre completo</string>
    <string name="user_password_confirm">Confirma contraseña</string>
    <string name="button_register_sing_up">Registrarme</string>
    <string name="message_password_length">La contraseña debe tener al menos 8 caracteres</string>
    <string name="message_password_equals">Las contraseñas deben coincidir y tener al menos 8 caracteres </string>
    <string name="message_mail">El formato de la dirección de correo electrónico no es válido</string>
    <string name="register_succes">El usuario registrado</string>

    <!-- NavDrawer List -->
    <string name="header"></string>
    <string name="my_events">Mis eventos</string>
    <string name="my_perfil">Mi perfil</string>
    <string name="settings">Configuración</string>
    <string name="about">Acerca de</string>

    <!-- Mainly Menu -->
    <string name="menu_show_demo">Cómo funciona</string>
    <string name="menu_close_sesion">Cerrar sesión</string>
    <string name="title_activity_demo">DemoActivity</string>

    <!-- Demo Activity -->
    <string name="action_omited">Omitir</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetuer adipiscing elit ipsum dolor sit amet, consectetuer adipiscing elit</string>
    <string name="more">VER MAS</string>
    <string name="text_demo_1">VERIFICA ALGUNO DE LOS EVENTOS QUE SE REALIZAN EN EL PAÍS Y AYUDEMOS A CONSTRUIR EL FUTURO DE MÉXICO  </string>
    <string name="text_demo_2">ACUDE Y VERIFICA EL EVENTO DE TU INTERES</string>
    <string name="text_demo_3">CAPTURA EVIDENCIA EN TAN SOLO UNOS MINUTOS</string>
    <string name="text_demo_4">¡ENVIA TU REPORTE!</string>
    <string name="txt_demo_1_description"></string>
    <string name="txt_demo_2_description">Explora los eventos cercanos a tu localidad, recuerda que si no puedes asistir o esta fuera de tu localidad no te preocupes puedes compartirlo con tus amigos.</string>
    <string name="txt_demo_3_description">Captura una o varias fotos del evento, asignale una calificación y agrega un comentario. Tu evidencia es fundamental para generar un cambio en el país.</string>
    <string name="txt_demo_4_description">Envia tu reporte desde el lugar en donde se realizo el evento para que seá una evidencia valida y gracias por tu participación unidos avanzamos hacia la paz.</string>
    <!-- Events Fragment -->

    <string name="google_maps_key">AIzaSyCAIn_FQYTrqtgu_nYvzwRWsIgmrMtIq4s</string>

    <!-- Evidence Activity and Fragment -->

    <string name="title_evidence">Yo Reviso</string>
    <string name="question">¿Deseas capturar evidencia del evento descrito en este momento? Recuerda que es necesario que te encuentres en el lugar donde se esta realizando el evento.</string>
    <!-- Calification Event -->
    <string name="scale_txt">En una escala del 1 al 5</string>

    <!-- Messages -->

    <string name="not_avaliable">Memoria no esta disponible , verifica que tengas espacio</string>
    <string name="only_reading">Al parecer Memoria se encuentra solo en modo lectura</string>
    <string name="yes_dialog">Por supuesto</string>
    <string name="no_dialog">No lo creo</string>
    <string name="btn_location">Cambiar localidad ahora</string>
    <string name="location_title_text">Recuerda que puedes visualizar ocurrencias de todo el país.</string>
    <string name="location_instruction_txt">Cambia tu localidad para recibir ocurrencias de otro estado / municipio y si no puedes asistir comparte el evento con tus amigos.</string>
    <string name="camera_instruction">Captura todas las fotos  que desees acerca del evento , llena la información solicitada y envia la evidencia</string>
    <string name="camera_instruction_two">Presiona la camara para tomar una foto.</string>
    <string name="hasnot_camera">Al parecer este dispositivo no tiene una camara.</string>
    <string name="calification_event">¿Comó calificarías el evento?</string>
    <string name="title_activity_municipal">MunicipalActivity</string>
    <string name="progress_dialog_session">Iniciando sesión, espera un momento por favor.</string>
    <string name="progress_dialog_sing_up">Creando cuenta, espera un momento por favor.</string>
    <string name="progress_dialog_help">Descargando datos, espera un momento por favor.</string>
    <string name="progress_dialog_evidence">Enviando reporte, espera un momento por favor.</string>
    <string name="progress_dialog_update">Actualizando localidad del perfil, espera un momento por favor.</string>
    <string name="url_nosmuevelapaz">http://nosmuevelapaz.org/</string>
    <string name="info_contact">No hay información de contacto</string>

    <!-- Error Dialog -->
    <string name="session_error">Correo electrónico o contraseña incorrectos</string>
    <string name="session_error_confirm">vale</string>

    <!-- Settings Preferences -->
    <string name="category_location_label">Localidad</string>
    <string name="category_account_label">Configuración de la Cuenta</string>
    <string name="category_about_label">Acerca de</string>
    <string name="pref_profile">Edita tu perfil</string>
    <string name="pref_about">Acerca de YoVerifico</string>
    <string name="pref_tutorial">Cómo funciona</string>
    <string name="pref_location">Localidad Actual</string>
    <string name="pref_session">Finalizar sesión</string>
    <string name="pref_location_label">Municipio</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string>
    <string name="pref_units_label">Estado</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="pref_close_session_key">session</string>
    <string name="pref_tutorial_key">tutorial</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--calification event-->
    <string name="malo_ponderation">Malo</string>
    <string name="bueno_ponderation">Bueno</string>
    <string name="regular_ponderation">Regular</string>
    <string name="my_bueno_ponderation">Muy Bueno</string>
    <string name="excelente_ponderation">Excelente</string>

    <!--profile fragment-->
    <string name="user_name_profile">Nombre de usuario</string>
    <string name="user_location_profile">Estado , Municipio</string>
    <string name="user_mail_profile">tucorreo@mail.com</string>
    <string name="user_movil">Ciudadano Movil</string>

    <!-- fragment municipal-->

    <string name="title_main">Selecciona tu nueva Localidad</string>
    <string name="sub_state">Estado</string>
    <string name="sub_twon">Municipio</string>
    <string name="sub_btn">Guardar cambios</string>

</resources>
