<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_left_login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/pruebas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:src="@drawable/vertical_logo" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_session"
            style="@style/Widget.Button.Login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/button_session_login" />

        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.Button.Login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/button_register" />

        <TextView
            style="@style/Widget.TextView.Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/description_app"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>


</LinearLayout>
