<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_left_login"
    android:paddingRight="@dimen/margin_left_login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:filterTouchesWhenObscured="true"
        android:src="@drawable/imagen" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="12dp"
            android:contentDescription="@android:string/unknownName"
            android:src="@drawable/ic_email_registration" />

        <EditText
            android:id="@+id/edit_txt_email"
            style="@style/Widget.EditText.Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/user_mail"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="12dp"
            android:contentDescription="@android:string/unknownName"
            android:src="@drawable/ic_password_registration" />

        <EditText
            android:id="@+id/edit_txt_password"
            style="@style/Widget.EditText.Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_edt" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.Button.Standar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:text="@string/button_session" />


    <Button
        android:id="@+id/btn_register"
        style="@style/Widget.Button.Standar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:text="@string/button_register" />


    <View
        android:id="@+id/statusBarBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
