<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:paddingLeft="@dimen/margin_left_login"
    android:paddingRight="@dimen/margin_left_login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_c"
            android:orientation="vertical"
            android:padding="10dp">


            <EditText
                android:id="@+id/edit_txt_email"
                style="@style/Widget.EditText.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:ems="10"
                android:text="ciudadano-movil@mail.com"
                android:hint="@string/user_mail"
                android:inputType="textEmailAddress"
                android:padding="10dp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/disable_black_two" />


            <EditText
                android:id="@+id/edit_txt_password"
                style="@style/Widget.EditText.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:ems="10"
                android:text="ciudadano"
                android:hint="@string/user_password"
                android:inputType="textPassword"
                android:padding="10dp" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.Button.Standar.Custom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/button_session" />


    </LinearLayout>
</ScrollView>