<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_left_login"
        android:paddingRight="@dimen/margin_left_login"
        tools:context="la.opi.verificacionciudadana.activities.SignUp$PlaceholderFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:contentDescription="@android:string/unknownName"
                android:src="@drawable/ic_profile" />

            <EditText
                android:id="@+id/edit_txt_name"
                style="@style/Widget.EditText.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:contentDescription="@android:string/unknownName"
                android:src="@drawable/ic_email_registration" />

            <EditText
                android:id="@+id/edit_txt_email"
                style="@style/Widget.EditText.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/user_mail"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding_edt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:contentDescription="@android:string/unknownName"
                android:src="@drawable/ic_password_registration" />

            <EditText
                android:id="@+id/edit_txt_password"
                style="@style/Widget.EditText.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/user_password"
                android:inputType="textPassword"
                android:padding="@dimen/padding_edt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:contentDescription="@android:string/unknownName"
                android:src="@drawable/ic_password_registration" />

            <EditText
                android:id="@+id/edit_txt_password_confirm"
                style="@style/Widget.EditText.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/user_password_confirm"
                android:inputType="textPassword"
                android:padding="@dimen/padding_edt" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.Button.Standar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:text="@string/button_register_sing_up" />


    </LinearLayout>
</ScrollView>